--- a/app/src/main/res/layout/activity_active_course_schedule.xml
+++ b/app/src/main/res/layout/activity_active_course_schedule.xml
@@ -6,7 +6,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/info">
+        android:id="@+id/info"
+        android:visibility="gone">
         <TextView
             android:id="@+id/textClassInfo"
             android:layout_width="match_parent"
