--- a/app/src/main/res/layout-v26/student_payment_card.xml
+++ b/app/src/main/res/layout-v26/student_payment_card.xml
@@ -23,8 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_weight="1"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/btn_blue"
+        android:textColor="@color/colorRed"
         android:textSize="16sp"
         android:padding="5dp"
         android:textStyle="normal"
