--- a/app/src/main/res/layout/activity_active_course_home.xml
+++ b/app/src/main/res/layout/activity_active_course_home.xml
@@ -15,6 +15,16 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:typeface="sans"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:id="@+id/text1"
+                android:text="Course Description"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"
                 android:typeface="sans"
@@ -22,12 +32,23 @@
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:id="@+id/textCourseDescription"
                 android:text="This is course description. This is course description. This is course description. This is course description. This is course description. This is course description. This is course description."
-                android:padding="5dp"/>
+                android:padding="5dp"
+                android:layout_below="@id/text1"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:typeface="sans"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:id="@+id/text2"
+                android:text="Introductory Resources"
+                android:layout_below="@id/textCourseDescription"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/listIntroductoryMaterial"
-                android:layout_below="@id/textCourseDescription"
+                android:layout_below="@id/text2"
                 android:orientation="horizontal"
                 android:layout_margin="@dimen/activity_vertical_margin"
                 tools:listitem="@layout/course_introductory_content_card"
@@ -36,11 +57,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
                 android:typeface="sans"
-                android:textStyle="bold"
-                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:id="@+id/text"
                 android:text="@string/course_resources"
                 android:padding="5dp"
