--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -7,7 +7,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="3dp"
-    android:backgroundTint="@color/transparent">
+    android:backgroundTint="@color/transparent"
+    android:layout_marginHorizontal="3dp">
     <androidx.cardview.widget.CardView
         android:id="@+id/courseIntroductoryCard"
         android:layout_width="200dp"
