--- a/app/src/main/res/layout/student_payment_card.xml
+++ b/app/src/main/res/layout/student_payment_card.xml
@@ -10,8 +10,6 @@
         android:layout_height="40dp"
         android:layout_weight="3"
         android:textColor="@color/colorPrimary"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMinTextSize="16sp"
         android:background="@drawable/text_view_add_course"
         android:backgroundTint="@color/colorPrimary"
         android:padding="5dp"
@@ -23,8 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_weight="1"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/btn_blue"
+        android:textColor="@color/colorRed"
         android:textSize="16sp"
         android:padding="5dp"
         android:textStyle="normal"
