--- a/app/src/main/res/layout/teachers_viewof_course_settings.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_settings.xml
@@ -314,7 +314,7 @@
                 android:id="@+id/imgCourseImage"
                 android:layout_width="200dp"
                 android:layout_height="160dp"
-                android:src="@drawable/background"
+                android:src="@drawable/lightlogo2"
                 android:scaleType="centerCrop"
                 tools:ignore="ContentDescription"
                 android:layout_gravity="center_horizontal"
@@ -406,19 +406,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                app:thumbTint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
                 android:text="@string/accept_new_registrations"
                 android:textSize="@dimen/text_margin"
                 android:textStyle="bold"
-                android:padding="5dp"/>
+                android:padding="5dp" />
         </LinearLayout>
     </ScrollView>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorWhite"
-        android:background="@color/colorPrimary"
+        android:background="@color/button_green"
         android:elevation="4dp"
         android:text="@string/save"
         android:letterSpacing="0.3"
