--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -138,43 +138,43 @@
                     android:textColor="@color/colorBlack"
                     android:selectAllOnFocus="true"/>
             </com.google.android.material.textfield.TextInputLayout>
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <com.google.android.material.chip.ChipGroup
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/MaterialTheme"
-                    app:singleLine="true">
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.Chip.Entry"
-                        android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"
-                        app:chipIconEnabled="false"
-                        app:checkedIconEnabled="false"
-                        app:chipIcon="@color/colorRed"/>
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.Chip.Entry"
-                        android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"/>
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.Chip.Entry"
-                        android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"/>
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.Chip.Entry"
-                        android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"/>
-                </com.google.android.material.chip.ChipGroup>
-            </HorizontalScrollView>
+<!--            <HorizontalScrollView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
+<!--                <com.google.android.material.chip.ChipGroup-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    style="@style/MaterialTheme"-->
+<!--                    app:singleLine="true">-->
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Entry"-->
+<!--                        android:text="@string/app_name"-->
+<!--                        android:textSize="@dimen/text_margin"-->
+<!--                        app:chipIconEnabled="false"-->
+<!--                        app:checkedIconEnabled="false"-->
+<!--                        app:chipIcon="@color/colorRed"/>-->
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Entry"-->
+<!--                        android:text="@string/app_name"-->
+<!--                        android:textSize="@dimen/text_margin"/>-->
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Entry"-->
+<!--                        android:text="@string/app_name"-->
+<!--                        android:textSize="@dimen/text_margin"/>-->
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Entry"-->
+<!--                        android:text="@string/app_name"-->
+<!--                        android:textSize="@dimen/text_margin"/>-->
+<!--                </com.google.android.material.chip.ChipGroup>-->
+<!--            </HorizontalScrollView>-->
 
             <Button
                 android:id="@+id/add_course_category"
