--- a/app/src/main/res/drawable/gradient_login_frame.xml
+++ b/app/src/main/res/drawable/gradient_login_frame.xml
@@ -2,7 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#FF6D00"
-        android:endColor="#6200EA"
-        android:angle="45"/>
+        android:startColor="#ff7514"
+        android:centerColor="#813cfa"
+        android:endColor="#304FFE"
+        android:angle="45"
+        android:centerX="0.9"
+        android:centerY="0.8"/>
 </shape>
