--- a/app/src/main/res/layout/activity_class_teacher.xml
+++ b/app/src/main/res/layout/activity_class_teacher.xml
@@ -174,19 +174,22 @@
 <!--        </androidx.cardview.widget.CardView>-->
 <!--    </FrameLayout>-->
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorWhite"
-        android:elevation="4dp"
+        android:elevation="8dp"
         android:text="@string/save"
         android:letterSpacing="0.3"
         android:layout_centerHorizontal="true"
         android:id="@+id/updateChange"
         android:clickable="true"
         android:focusable="true"
-        android:layout_margin="0dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_below="@id/ll3"/>
+        android:background="@drawable/btn_blue"
+        android:backgroundTint="@color/button_green"
+        android:layout_below="@id/ll3"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="25dp"
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -207,16 +210,44 @@
         android:gravity="center"
         android:layout_centerHorizontal="true"
         tools:listitem="@layout/video_resource_card"/>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/add_icon_24"
+        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:foregroundGravity="center"
-        android:elevation="20dp"
-        android:id="@+id/btnAdd"
-        tools:ignore="ContentDescription" />
+        android:weightSum="3"
+        android:gravity="center">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_doc"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:foregroundGravity="center"
+            android:elevation="20dp"
+            android:id="@+id/btnAddDoc"
+            tools:ignore="ContentDescription" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_image"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:foregroundGravity="center"
+            android:elevation="20dp"
+            android:id="@+id/btnAddImage"
+            tools:ignore="ContentDescription" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_video"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:foregroundGravity="center"
+            android:elevation="20dp"
+            android:id="@+id/btnAddVideo"
+            tools:ignore="ContentDescription" />
+    </LinearLayout>
+
 
 </RelativeLayout>
